k8/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: talentiq-prod
  labels:
    name: talentiq-prod
