k8/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: talentiq-service
  namespace: talentiq-prod
  labels:
    name: talentiq
spec:
  ports:
    - port: 8080
  selector:
    app: talentiq
